# quoin

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  justfile
.github/workflows/: ci.yml
docs/: align-shadcn-spec.md  best-dx-gaps.md  best-dx.md  deps-api-alignment.md  doc-review.md  later-support.md  leptos-dioxus-emission-parity.md  quoin-archi.md  quoin-brs.md  quoin-bst.md  quoin-plan.md  quoin-srs.md  quoin-vision.md  refactor.md
docs/refs/: gui-component-ref.md  leptos-shadcn-ui-ref.md  shadcn-dioxus-ref.md
examples/: ucp-shared.rs
examples/counter/: Cargo.toml  README.md
examples/counter-dioxus/: Cargo.toml  README.md
examples/counter-floem/: Cargo.toml  README.md
examples/counter-gpui/: Cargo.toml  README.md
examples/counter-gpui/src/: main.rs
examples/counter-leptos/: Cargo.toml  README.md  index.html
examples/counter-leptos/src/: lib.rs  main.rs
examples/counter-xilem/: Cargo.toml  README.md
examples/mini-devtools-gpui/: Cargo.toml  README.md
examples/mini-devtools-gpui/src/: main.rs
examples/shadcn-showcase/: Cargo.toml  index.html
examples/shadcn-showcase/src/: lib.rs  main.rs
examples/ucp-demo/: Cargo.toml  expanded.rs
examples/ucp-demo-dioxus/: Cargo.toml  README.md
examples/ucp-demo-dioxus/src/: main.rs
examples/ucp-demo-gpui/: Cargo.toml  README.md
examples/ucp-demo-gpui/src/: main.rs
examples/ucp-demo-leptos/: Cargo.toml  README.md  index.html  pnpm-lock.yaml
examples/ucp-demo-leptos-shadcn/: Cargo.toml  index.html
examples/ucp-demo-leptos-shadcn/src/: lib.rs
examples/ucp-demo-leptos/src/: lib.rs
examples/ucp-demo-leptos/style/: tailwind.css
examples/ucp-demo/src/: main.rs
examples/ucp-lib/: Cargo.toml  README.md  expanded.rs
examples/ucp-lib/src/: lib.rs
macro-debug/: Cargo.toml
macro-debug/src/: lib.rs
quoin/: Cargo.toml  README.md
quoin-conformance/: Cargo.toml
quoin-conformance/src/: lib.rs
quoin-conformance/tests/: smoke.rs
quoin-core/: Cargo.toml  README.md
quoin-dioxus/: Cargo.toml  README.md
quoin-dioxus/src/: lib.rs
quoin-dioxus/tests/: conformance.rs
quoin-expand-test/: Cargo.toml  README.md
quoin-floem/: Cargo.toml
quoin-floem/src/: lib.rs
quoin-floem/tests/: conformance.rs
quoin-gpui/: Cargo.toml  README.md
quoin-gpui/src/: lib.rs
quoin-gpui/tests/: conformance.rs
quoin-leptos/: Cargo.toml  README.md
quoin-leptos/src/: lib.rs
quoin-leptos/tests/: conformance.rs
quoin-macros/: Cargo.toml
quoin-macros-core/: Cargo.toml
quoin-macros-core/src/: custom_element.rs  effect.rs  error.rs  lib.rs  parse.rs  render_ast.rs  render_ast_diag.rs  run_app.rs
quoin-macros-core/src/emit/: cfg.rs  common.rs  component.rs  dioxus.rs  gpui.rs  leptos.rs  mod.rs  render_dioxus.rs  render_gpui.rs  render_leptos.rs  run_app_dioxus.rs  run_app_gpui.rs  run_app_leptos.rs
quoin-macros-core/src/emit/render_dioxus/: button.rs  control_flow.rs  data_table.rs  dropdown_menu.rs  form_controls.rs  generic.rs  handler.rs  input.rs  mod.rs  simple_components.rs  tabs.rs  tier1_components.rs  tooltip.rs  virtual_list.rs
quoin-macros-core/src/emit/render_gpui/: button.rs  clipboard_button.rs  control_flow.rs  data_table.rs  dropdown_menu.rs  generic.rs  handler.rs  input.rs  mod.rs  tabs.rs  virtual_list.rs
quoin-macros-core/src/emit/render_leptos/: accordion.rs  alert.rs  alert_dialog.rs  avatar.rs  badge.rs  bindings.rs  breadcrumb.rs  button.rs  calendar.rs  card.rs  carousel.rs  checkbox.rs  clipboard_button.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  control_flow.rs  data_table.rs  date_picker.rs  dialog.rs  drawer.rs  dropdown_menu.rs  error_boundary.rs  form.rs  generic.rs  handler.rs  hover_card.rs  icon.rs  input.rs  label.rs  lazy_component.rs  mod.rs  other.rs  pagination.rs  progress.rs  radio.rs  scroll_area.rs  select.rs  separator.rs  (+10 more)
quoin-macros-core/src/transpile/: dropdown_codegen.rs  icon_codegen.rs  mod.rs  rich_text_codegen.rs  table_codegen.rs  tailwind.rs  theme_tokens.rs  virtual_list_codegen.rs
quoin-macros-core/tests/: leptos_shadcn_snapshots.rs
quoin-macros-tests/: Cargo.toml  build.rs
quoin-macros-tests/tests/: macro_tests.rs
quoin-macros-tests/tests/ui/: component_dioxus_pass.rs  component_globals_gpui_pass.rs  component_gpui.rs  component_gpui_pass.rs  component_leptos_actions_pass.rs  component_leptos_pass.rs  component_missing_render.stderr  component_on_mount_gpui_pass.rs  component_state_missing_default_fail.rs  component_state_missing_default_fail.stderr  component_unexpected_ident_fail.rs  component_unexpected_ident_fail.stderr  effect_dioxus_pass.rs  effect_gpui_pass.rs  effect_leptos_pass.rs  render_cfg_passthrough_gpui_pass.rs  render_clipboard_button_gpui_pass.rs  render_data_table_sortable_gpui_pass.rs  render_dioxus_pass.rs  render_dropdown_gpui_pass.rs  render_gpui_pass.rs  render_missing_colon.rs  render_missing_colon.stderr  render_unknown_element_fail.rs  render_unknown_element_fail.stderr  render_virtual_list_gpui_pass.rs
quoin-macros/src/: custom_element.rs  effect.rs  error.rs  lib.rs  parse.rs  render_ast.rs
quoin-macros/src/emit/: dioxus.rs  gpui.rs  leptos.rs  mod.rs  render_dioxus.rs  render_gpui.rs  render_leptos.rs
quoin-macros/src/transpile/: dropdown_codegen.rs  mod.rs  rich_text_codegen.rs  table_codegen.rs  tailwind.rs  virtual_list_codegen.rs
quoin-macros/tests/: component_tests.rs  macro_tests.rs
quoin-macros/tests/ui/: component_dioxus_pass.rs  component_gpui_pass.rs  component_leptos_pass.rs  component_missing_render.rs  component_missing_render.stderr  effect_dioxus_pass.rs  effect_gpui_pass.rs  effect_leptos_pass.rs  render_dioxus_pass.rs  render_gpui_pass.rs  render_leptos_pass.rs
quoin-ui/: Cargo.toml
quoin-ui-gpui/: Cargo.toml
quoin-ui-gpui/src/: lib.rs  navigator.rs
quoin-xilem/: Cargo.toml
quoin-xilem/src/: lib.rs
quoin-xilem/tests/: conformance.rs
quoin/src/: cancellation.rs  executor.rs  lib.rs  macros.rs  prelude.rs  reactive.rs  signal.rs
ucp-lib/: Cargo.toml
ucp-lib/src/: lib.rs
(+16 files in other folders)
