[workspace]
resolver = "2"
members = [
    "examples/counter",
    "examples/counter-gpui",
    "examples/counter-leptos",
    "quoin-leptos",
    "quoin-dioxus",
    "quoin-gpui",
    "quoin-xilem",
    "quoin-floem",
    "quoin-conformance",
    "quoin",
]
exclude = [
    "examples/counter-dioxus",   # Excluded due to cocoa conflict with GPUI
]

[workspace.package]
edition = "2024"
[[workspace.metadata.leptos]]
name = "counter-leptos"
bin-package = "counter-leptos"
lib-package = "counter-leptos"
site-root = "examples/counter-leptos/target/site"
