[workspace]
resolver = "2"
members = [
    "examples/counter",
    "quoin-leptos",
    "quoin-dioxus",
    "quoin-gpui",
    "quoin-xilem",
    "quoin-floem",
    "quoin-conformance",
    "quoin-core",
    "quoin-core",
    "quoin",
    "quoin-macros",
    "quoin-macros-core",
    "quoin-macros-tests",
    "quoin-ui",
    "quoin-ui-gpui",
]
exclude = [
    "examples/counter-dioxus",
    "examples/counter-gpui",
    "examples/counter-leptos",
    "examples/counter-floem",
    "examples/counter-xilem",
    "examples/ucp-demo-dioxus",
    "examples/ucp-demo-gpui",
    "examples/ucp-demo-leptos",
    "examples/ucp-lib",
    "examples/mini-devtools-gpui",
    "quoin-expand-test",
]

[workspace.package]
edition = "2024"

[[workspace.metadata.leptos]]
name = "counter-leptos"
bin-package = "counter-leptos"
lib-package = "counter-leptos"
site-root = "examples/counter-leptos/target/site"
