[package]
name = "macro-debug"
version = "0.1.0"
edition.workspace = true

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", version = "0.2.2" }
quoin = { version = "0.1.0", path = "../quoin" }
quoin-gpui = { version = "0.1.0", path = "../quoin-gpui" }
quoin-macros = { version = "0.1.0", path = "../quoin-macros" }

[features]
gpui = ["quoin-macros/gpui"]
