[package]
name = "quoin-conformance"
version = "0.1.0"
edition = "2024"
description = "Conformance test suite for quoin reactive framework adapters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/quoin"
readme = "README.md"

[dependencies]
quoin-core = { path = "../quoin-core", default-features = false }
futures = "0.3"

# Optional dependencies for specific adapters
gpui = { git = "https://github.com/zed-industries/zed", optional = true }

[features]
leptos = []
gpui   = ["dep:gpui"]
dioxus = []
xilem  = []
floem  = []
[lib]
name = "quoin_conformance"
path = "src/lib.rs"
