[package]
name = "quoin-dioxus"
version = "0.1.0"
edition = "2024"
description = "Dioxus adapter for quoin reactive abstraction"
license = "MIT"
repository = "https://github.com/username/quoin"

[dependencies]
quoin-core = { path = "../quoin-core" }
dioxus = "0.7"
dioxus-core = "0.7"
futures = "0.3"
send_wrapper = "0.6"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard"] }

# shadcn-dioxus — not published on crates.io, use git.
# The crate name inside the repo is "ui", so we rename it.
shadcn-dioxus = { package = "ui", git = "https://github.com/MBeliou/shadcn-dioxus", optional = true }

[dev-dependencies]
quoin-conformance = { path = "../quoin-conformance", features = ["dioxus"] }
dioxus-core = "0.7"
futures-timer = "3.0"

[features]
shadcn = ["dep:shadcn-dioxus"]
