[package]
name = "quoin-gpui"
version = "0.1.0"
edition = "2024"
description = "GPUI adapter for quoin reactive abstraction"
license = "MIT"
repository = "https://github.com/username/quoin"

[dependencies]
quoin-core = { path = "../quoin-core" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed" }
futures = "0.3"
send_wrapper = "0.6"

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }
quoin-conformance = { path = "../quoin-conformance", features = ["gpui"] }
