[package]
name = "quoin-leptos"
version = "0.1.0"
edition = "2024"
description = "Leptos adapter for quoin reactive abstraction"
license = "MIT"
repository = "https://github.com/username/quoin"

[dependencies]
quoin-core = { path = "../quoin-core", default-features = false, features = ["leptos"] }

futures = { version = "0.3", features = ["executor"] }
leptos = { version = "0.8" }
send_wrapper = "0.6"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard"] }

# shadcn component crates (optional — enable with features = ["shadcn"])
# Each crate is individual per component following the leptos-shadcn-ui pattern.
# The emitter targets these when available; plain HTML fallback otherwise.
leptos-shadcn-button  = { version = "0.4", optional = true }
leptos-shadcn-input   = { version = "0.4", optional = true }
leptos-shadcn-tabs    = { version = "0.4", optional = true }
leptos-shadcn-badge   = { version = "0.4", optional = true }
leptos-shadcn-table   = { version = "0.4", optional = true }
leptos-shadcn-tooltip = { version = "0.4", optional = true }
leptos-shadcn-dialog  = { version = "0.4", optional = true }
leptos-shadcn-scroll-area = { version = "0.4", optional = true }

[dev-dependencies]
quoin-conformance = { path = "../quoin-conformance", features = ["leptos"] }
futures-timer = "3.0"

[features]
# Pull in all shadcn component deps. The quoin_render! emitter will target
# these components when this feature is active (future phase work).
shadcn = [
    "dep:leptos-shadcn-button",
    "dep:leptos-shadcn-input",
    "dep:leptos-shadcn-tabs",
    "dep:leptos-shadcn-badge",
    "dep:leptos-shadcn-table",
    "dep:leptos-shadcn-tooltip",
    "dep:leptos-shadcn-dialog",
    "dep:leptos-shadcn-scroll-area",
]
