[package]
name = "quoin-macros-core"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0"

quoin-dioxus = { path = "../quoin-dioxus", optional = true }
quoin-leptos = { path = "../quoin-leptos", optional = true }
quoin-gpui = { path = "../quoin-gpui", optional = true }
quoin-ui-gpui = { path = "../quoin-ui-gpui", optional = true }

[features]
default = []
gpui = []
dioxus = []
leptos = []
