[package]
name = "quoin-macros-core"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0"

[features]
default = []
gpui = []
dioxus = []
leptos = []
# When enabled, emitters produce shadcn component calls instead of plain HTML.
# The consumer crate must have the shadcn deps available for the emitted code to compile.
leptos-shadcn = []
dioxus-shadcn = []
