[package]
name = "quoin-macros-tests"
version = "0.0.0"
edition = "2021"
build = "build.rs" # Keep the build.rs!

[dependencies]
quoin = { path = "../quoin" }
quoin-macros = { path = "../quoin-macros" }

# GPUI is a feature, just like you want!
gpui = { git = "https://github.com/zed-industries/zed", optional = true }
quoin-gpui = { path = "../quoin-gpui", optional = true }
quoin-ui-gpui = { path = "../quoin-ui-gpui", optional = true }
gpui-component = { git = "https://github.com/elcoosp/gpui-component", optional = true, branch = "fix/import-error-corner" }

leptos = { version = "0.8", optional = true }
quoin-leptos = { path = "../quoin-leptos", optional = true }

dioxus = { version = "0.7", optional = true }
dioxus-signals = { version = "0.7", optional = true }
dioxus-core = { version = "0.7", optional = true }
quoin-dioxus = { path = "../quoin-dioxus", optional = true }

[features]
default = []
# Make sure quoin-macros/gpui is activated too!
gpui = ["dep:gpui", "dep:quoin-gpui", "dep:quoin-ui-gpui", "dep:gpui-component", "quoin-macros/gpui", "quoin/gpui"]
leptos = ["dep:leptos", "dep:quoin-leptos", "quoin-macros/leptos", "quoin/leptos"]
dioxus = [
    "dep:dioxus",
    "dep:dioxus-core",
    "dep:quoin-dioxus",
    "quoin-macros/dioxus",
    "quoin/dioxus"
]
[dev-dependencies]
trybuild = "1.0"
