[package]
name = "quoin-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"

[features]
default = []
gpui = []
leptos = []
dioxus = []
