[package]
name = "quoin-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
quoin-macros-core = { path = "../quoin-macros-core" }

[dev-dependencies]
trybuild = "1.0"
quoin-macros-core = { path = "../quoin-macros-core" }

[features]
default = []
gpui = ["quoin-macros-core/gpui"]
dioxus = ["quoin-macros-core/dioxus"]
leptos = ["quoin-macros-core/leptos"]
