[package]
name = "quoin-ui-gpui"
version = "0.1.0"
edition = "2021"
description = "GPUI backend for quoin-ui Universal Component Protocol"
license = "MIT OR Apache-2.0"

[dependencies]
quoin-ui = { path = "../quoin-ui" }
gpui = { git = "https://github.com/zed-industries/zed" }
# Uncomment when gpui-component is added to the workspace
# gpui-component = { git = "https://github.com/longbridge/gpui-component" }
