[package]
name = "quoin-ui-gpui"
version = "0.1.0"
edition = "2024"
description = "GPUI backend for quoin-ui Universal Component Protocol"
license = "MIT"

[dependencies]
quoin-ui = { path = "../quoin-ui" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
