[package]
name = "quoin-xilem"
version = "0.1.0"
edition = "2024"
description = "Xilem adapter for quoin reactive abstraction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/quoin"

[dependencies]
quoin = { path = "../quoin", default-features = false }
xilem = "0.4.0"
xilem_core = "0.4.0"
futures = "0.3"
futures-timer = "3.0"
send_wrapper = "0.6"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
[dev-dependencies]
quoin-conformance = { path = "../quoin-conformance", features = ["xilem"] }
