[package]
name = "quoin"
version = "0.1.0"
edition = "2024"
description = "A foundational reactive abstraction layer for Rust UI frameworks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/quoin"
readme = "README.md"
keywords = ["reactive", "ui", "framework", "abstraction", "signals"]
categories = ["gui", "asynchronous", "rust-patterns"]

[dependencies]
quoin-core = { path = "../quoin-core" }
futures-core = "0.3"

# Adapter crates (optional, pulled in by feature flags)
quoin-gpui      = { path = "../quoin-gpui",      optional = true }
quoin-dioxus    = { path = "../quoin-dioxus",    optional = true }
quoin-leptos    = { path = "../quoin-leptos",    optional = true }
quoin-xilem     = { path = "../quoin-xilem",     optional = true }
quoin-floem     = { path = "../quoin-floem",     optional = true }

# Macro crate (optional)
quoin-macros    = { path = "../quoin-macros",    optional = true }

# UCP crates (optional)
quoin-ui        = { path = "../quoin-ui",        optional = true }
quoin-ui-gpui   = { path = "../quoin-ui-gpui",   optional = true }

[features]
default = []
gpui   = ["dep:quoin-gpui", "dep:quoin-ui-gpui", "dep:quoin-macros", "quoin-macros?/gpui"]
dioxus = ["dep:quoin-dioxus", "dep:quoin-macros", "quoin-macros?/dioxus"]
leptos = ["dep:quoin-leptos", "dep:quoin-macros", "quoin-macros?/leptos"]
xilem  = ["dep:quoin-xilem"]
floem  = ["dep:quoin-floem"]
macros = ["dep:quoin-macros"]
ui     = ["dep:quoin-ui"]
