[package]
name = "quoin"
version = "0.1.0"
edition = "2024"
description = "A foundational reactive abstraction layer for Rust UI frameworks"
license = "MIT"
repository = "https://github.com/username/quoin"
readme = "README.md"
keywords = ["reactive", "ui", "framework", "abstraction", "signals"]
categories = ["gui", "asynchronous", "rust-patterns"]

[dependencies]
quoin-core = { path = "../quoin-core" }
futures-core = "0.3"

# Adapter crates (optional, pulled in by feature flags)
quoin-gpui      = { path = "../quoin-gpui",      optional = true }
quoin-dioxus    = { path = "../quoin-dioxus",    optional = true }
quoin-leptos    = { path = "../quoin-leptos",    optional = true }
quoin-xilem     = { path = "../quoin-xilem",     optional = true }
quoin-floem     = { path = "../quoin-floem",     optional = true }

# Macro crate (optional)
quoin-macros    = { path = "../quoin-macros",    optional = true }

# UCP crates (optional)
quoin-ui        = { path = "../quoin-ui",        optional = true }
quoin-ui-gpui   = { path = "../quoin-ui-gpui",   optional = true }

gpui = { git = "https://github.com/zed-industries/zed", optional = true }
[features]
default = []
gpui   = ["dep:gpui", "dep:quoin-gpui", "dep:quoin-ui-gpui", "dep:quoin-macros", "quoin-macros?/gpui"]
dioxus = ["dep:quoin-dioxus", "dep:quoin-macros", "quoin-macros?/dioxus"]
leptos = ["dep:quoin-leptos", "dep:quoin-macros", "quoin-macros?/leptos"]
xilem  = ["dep:quoin-xilem"]
floem  = ["dep:quoin-floem"]
macros = ["dep:quoin-macros"]
ui     = ["dep:quoin-ui"]

# shadcn component backing — use together with the framework feature.
# e.g. features = ["leptos", "leptos-shadcn"]
# This activates the shadcn feature on the adapter crate so the component
# deps are resolved, AND tells the macro emitter to target shadcn components.
leptos-shadcn = [
    "leptos",
    "quoin-leptos?/shadcn",
    "quoin-macros?/leptos-shadcn",
]
dioxus-shadcn = [
    "dioxus",
    "quoin-dioxus?/shadcn",
    "quoin-macros?/dioxus-shadcn",
]
