
[package]
name = "counter-gpui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui = { git = "https://github.com/zed-industries/zed" }
counter-lib = { path = "../counter", features = ["gpui"] }
quoin = { path = "../../quoin" }
quoin-gpui = { path = "../../quoin-gpui" }
