# examples/ucp-demo/Cargo.toml
[package]
name = "ucp-demo-gpui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
quoin = { path = "../../quoin", features = ["gpui"] }
ucp-lib = { path = "../ucp-lib", features = ["gpui"] }
