[package]
name = "ucp-demo-leptos-shadcn"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", default-features = false, features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
quoin = { path = "../../quoin", features = ["leptos", "leptos-shadcn"] }
ucp-lib = { path = "../ucp-lib", features = ["leptos-shadcn"] }
leptos-shadcn-ui = { git = "https://github.com/elcoosp/leptos-shadcn-ui", default-features = false, features = ["button", "input", "tabs", "badge", "table", "tooltip", "scroll-area", "dropdown-menu"] }
