[package]
name = "ucp-demo-leptos"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
quoin = { path = "../../quoin", features = ["leptos"] }
ucp-lib = { path = "../ucp-lib", features = ["leptos-shadcn"] }
