[package]
name = "ucp-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
quoin = { path = "../../quoin", features = ["gpui"] }
quoin-gpui = { path = "../../quoin-gpui" }
quoin-macros = { path = "../../quoin-macros", features = ["gpui"] }
quoin-ui = { path = "../../quoin-ui" }
quoin-ui-gpui = { path = "../../quoin-ui-gpui" }
uuid = { version = "1.0", features = ["v4"] }

[features]
gpui = ["quoin-macros/gpui"]
