[package]
name = "ucp-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
quoin = { path = "../../quoin" }
quoin-macros = { path = "../../quoin-macros" }
quoin-ui = { path = "../../quoin-ui" }

# Framework-specific dependencies (optional)
gpui = { git = "https://github.com/zed-industries/zed", optional = true }

[features]
gpui = ["dep:gpui", "quoin/gpui", "quoin-macros/gpui"]
leptos = ["quoin/leptos", "quoin-macros/leptos"]
dioxus = ["quoin/dioxus", "quoin-macros/dioxus"]
