[package]
name = "ucp-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
quoin = { path = "../../quoin" }
quoin-macros = { path = "../../quoin-macros" }
quoin-ui = { path = "../../quoin-ui" }

# Framework-specific dependencies (optional)
gpui = { git = "https://github.com/zed-industries/zed", optional = true }
leptos = { version = "0.8", optional = true }
dioxus = { version = "0.7", optional = true }
dioxus-core = { version = "0.7", optional = true }
dioxus-signals = { version = "0.7", optional = true }

[features]
gpui = ["dep:gpui", "quoin/gpui", "quoin-macros/gpui"]
leptos = ["dep:leptos", "quoin/leptos", "quoin-macros/leptos"]
dioxus = ["dep:dioxus", "dep:dioxus-core", "dep:dioxus-signals", "quoin/dioxus", "quoin-macros/dioxus"]
