[package]
name = "ucp-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
quoin = { path = "../../quoin" }
quoin-macros = { path = "../../quoin-macros" }
quoin-ui = { path = "../../quoin-ui" }

# Framework-specific dependencies (optional)
gpui = { git = "https://github.com/zed-industries/zed", optional = true }
leptos = { version = "0.8", optional = true }
dioxus = { version = "0.7", optional = true }
dioxus-core = { version = "0.7", optional = true }
dioxus-signals = { version = "0.7", optional = true }

# Add shadcn dependency – only needed when leptos is enabled
leptos-shadcn-ui = { version = "0.9.0", optional = true, default-features = false, features = ["button", "input", "tabs", "badge", "table", "tooltip", "scroll-area", "dropdown-menu"] }

[features]
gpui   = ["dep:gpui", "quoin/gpui", "quoin-macros/gpui"]
leptos = ["dep:leptos", "quoin/leptos", "quoin-macros/leptos"]
leptos-shadcn = ["leptos", "dep:leptos-shadcn-ui", "quoin/leptos-shadcn", "quoin-macros/leptos-shadcn"]
dioxus = ["dep:dioxus", "dep:dioxus-core", "dep:dioxus-signals", "quoin/dioxus", "quoin-macros/dioxus"]
